--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,6 +107,7 @@
     "chrono": "cpp",
     "ctime": "cpp",
     "ratio": "cpp",
-    "optional": "cpp"
+    "optional": "cpp",
+    "thread": "cpp"
   }
 }
